; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/clk/extr_nv50.c_calc_pll.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/clk/extr_nv50.c_calc_pll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nv50_clk = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.nvkm_subdev }
%struct.nvkm_subdev = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }
%struct.nvbios_pll = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nv50_clk*, i32, i32, i32*, i32*, i32*)* @calc_pll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @calc_pll(%struct.nv50_clk* %0, i32 %1, i32 %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.nv50_clk*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca %struct.nvkm_subdev*, align 8
  %15 = alloca %struct.nvbios_pll, align 8
  %16 = alloca i32, align 4
  store %struct.nv50_clk* %0, %struct.nv50_clk** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %17 = load %struct.nv50_clk*, %struct.nv50_clk** %8, align 8
  %18 = getelementptr inbounds %struct.nv50_clk, %struct.nv50_clk* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  store %struct.nvkm_subdev* %19, %struct.nvkm_subdev** %14, align 8
  %20 = load %struct.nvkm_subdev*, %struct.nvkm_subdev** %14, align 8
  %21 = getelementptr inbounds %struct.nvkm_subdev, %struct.nvkm_subdev* %20, i32 0, i32 0
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %9, align 4
  %26 = call i32 @nvbios_pll_parse(i32 %24, i32 %25, %struct.nvbios_pll* %15)
  store i32 %26, i32* %16, align 4
  %27 = load i32, i32* %16, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  br label %48

30:                                               ; preds = %6
  %31 = getelementptr inbounds %struct.nvbios_pll, %struct.nvbios_pll* %15, i32 0, i32 1
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  store i64 0, i64* %32, align 8
  %33 = load %struct.nv50_clk*, %struct.nv50_clk** %8, align 8
  %34 = load i32, i32* %9, align 4
  %35 = call i32 @read_pll_ref(%struct.nv50_clk* %33, i32 %34)
  %36 = getelementptr inbounds %struct.nvbios_pll, %struct.nvbios_pll* %15, i32 0, i32 0
  store i32 %35, i32* %36, align 8
  %37 = getelementptr inbounds %struct.nvbios_pll, %struct.nvbios_pll* %15, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %41, label %40

40:                                               ; preds = %30
  store i32 0, i32* %7, align 4
  br label %48

41:                                               ; preds = %30
  %42 = load %struct.nvkm_subdev*, %struct.nvkm_subdev** %14, align 8
  %43 = load i32, i32* %10, align 4
  %44 = load i32*, i32** %11, align 8
  %45 = load i32*, i32** %12, align 8
  %46 = load i32*, i32** %13, align 8
  %47 = call i32 @nv04_pll_calc(%struct.nvkm_subdev* %42, %struct.nvbios_pll* %15, i32 %43, i32* %44, i32* %45, i32* null, i32* null, i32* %46)
  store i32 %47, i32* %7, align 4
  br label %48

48:                                               ; preds = %41, %40, %29
  %49 = load i32, i32* %7, align 4
  ret i32 %49
}

declare dso_local i32 @nvbios_pll_parse(i32, i32, %struct.nvbios_pll*) #1

declare dso_local i32 @read_pll_ref(%struct.nv50_clk*, i32) #1

declare dso_local i32 @nv04_pll_calc(%struct.nvkm_subdev*, %struct.nvbios_pll*, i32, i32*, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
